tests/errors/sem_redefine2.java
public class sem_redefine2 {
    public static void main(String[] args) {

    }

    public static void main(String[] args) {

    }
}
